# my_game_manager

./: .gitignore  CMakeLists.txt  README.md
Config/: config.json
Database/: game.db
Open_src/sqlite/: sqlite3.exp  sqlite3.lib
Source/: CMakeLists.txt  main.cpp
Source/database/: CMakeLists.txt  database.cpp  database.h
Source/db/: CMakeLists.txt  database.cpp  database.h
Source/event/: CMakeLists.txt  EventManager.cpp  EventManager.h  evenmanager.cpp  evenmanager.h  fileutils.cpp
Source/game/: CMakeLists.txt  game_base.cpp  game_base.h  specific_game.cpp  specific_game.h
Source/user/: CMakeLists.txt  userinfo.cpp  userinfo.h
cmake/: Findsqlite3.cmake
